[tool.poetry]
name = "projet 4"
version = "0.1.0"
description = ""
authors = ["Damien chauvet.damien@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
scikit-learn = "^1.5.1"
yellowbrick = "^1.5"
numpy = "2.0"
plotly = "^5.24.1"
geopy = "^2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
